@@ -1,5 +1,6 @@
 Revision history for HTML::Filter
 
+          - Renamed elementOffset to getElementOffset for consistancy
           - Switched to elementOffset from cumulativeOffset
           - Put selector button at end of field for consistancy
           - Specify rule editor width from config
